// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer handles TOGGLE_NETWORK_ACTIVITY_INDICATOR 1`] = `
Object {
  "showNetworkIndicator": true,
}
`;

exports[`ui reducer handles TOGGLE_NETWORK_ACTIVITY_INDICATOR 2`] = `
Object {
  "showNetworkIndicator": false,
}
`;

exports[`ui reducer has an initial state 1`] = `
Object {
  "showNetworkIndicator": false,
}
`;
